file path updated

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                 <i class="ri-menu-line"></i>
             </div>
             <div class="music">
-                    <img src="image/armaan-malik.jpg" alt="">
+                    <img src="armaan-malik.jpg" alt="">
                 <h1>Iam Gonna Fly</h1>
                 <p>artist: Arisa</p>
                 <audio controls id="song">
-                    <source src="audio/one-day-iam.mp3" type="audio/mp3" >
+                    <source src="one-day-iam.mp3" type="audio/mp3" >
                 </audio>
                 <input type="range" class="range">
             </div>
